# EBBkC

./: README.md
shell/: download.sh  large.sh  small.sh
src/: CMakeLists.txt  EBBkC.cpp  EBBkC.h  VBBkC.cpp  VBBkC.h  def.cpp  def.h  edge_oriented.cpp  edge_oriented.h  main.cpp  set_operation.cpp  set_operation.h  vertex_oriented.cpp  vertex_oriented.h
src/truss/decompose/: iter_helper.cpp  iter_helper.h  main.cpp  main_helper.h  parallel_all_edge_cnc.h  pkt_merge.cpp  pkt_radix_map.cpp  pkt_support_update_utils.h  pkt_tri_cnt_intermediate.h
src/truss/util/: stat.h  util.h
src/truss/util/containers/: radix_hash_map.h
src/truss/util/graph/: graph.cpp  graph.h  graph_preprocessing.cpp  pre_processing.h  pre_processing_dodg.h  triangle_counting.h
src/truss/util/intersection/: set_inter_cnt_utils.h  set_utils.h
src/truss/util/ips4o/: ips4o.hpp
src/truss/util/log/: log.cpp
src/truss/util/primitives/: primitives.h
src/truss/util/reordering/: pkc_reorder.cpp  pkc_reorder_refactor.cpp  reorder_utils.cpp  reorder_utils.h
src/truss/util/search/: search_util.h
